# micm-nlp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  dockerfile  pyproject.toml
examples/: preprocess_dataset.py  run_model.py
examples/configs/: xsc_finetune.yml  xsc_preprocess.yml
src/micm_nlp/: __init__.py  bootstrap.py  config.py  enums.py  env.py  path.py  pipeline.py  setup.py  utils.py
src/micm_nlp/datasets/: dataset.py
src/micm_nlp/evals/: eval.py  plot.py
src/micm_nlp/evals/metrics/: log_likelihood.py  multirc.py
src/micm_nlp/evals/metrics/string_f1/: __init__.py  string_f1.py
src/micm_nlp/models/: architectures.py  model.py  peft.py
src/micm_nlp/models/xpe/: __init__.py  config.py  encoder.py  enums.py  factory.py  heads.py  peft_models.py  save_load.py
src/micm_nlp/tokenizers/: bert_byt5.py  decoding.py  tokenizer.py  xlm_roberta.py
src/micm_nlp/tokenizers/lib/sent/: ka_sen_tok.py
src/micm_nlp/training/: batching.py  calibration.py  callbacks.py  data_collators.py  logits_processors.py  runner.py  trainers.py
tests/: test_causal_lm.py  test_get_lengths_fallback.py  test_length_column_preservation.py  test_load_parity.py  test_parity.py  test_token_budget_batching.py  test_token_budget_calibration.py  test_token_budget_config.py  test_token_budget_dataloader.py  test_token_budget_end_to_end.py
tests/golden/: ratio0.0_headMLP.json  ratio0.3_headMLP.json  ratio0.5_headATTN.json  ratio0.5_headLSTM.json  ratio0.7_headMLP.json  ratio1.0_headLSTM.json  ratio1.0_headMLP.json  ratio1.0_headNONE.json
tests/xpe/: test_parity.py
tests/xpe/golden/: ratio0.5_headMLP.json  ratio1.0_headATTN.json
tests/xpe2/: test_hub_upload.py
